--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,7 @@
 ﻿.video__iframes {
+  margin: 0;
   display: flex;
   margin: 50px auto -60px auto;
   justify-content: center;
+  list-style-type: none;
   }
