--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,10 @@
 ﻿.video__iframes {
   margin: 0;
   display: flex;
-  margin: 50px auto -60px auto;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -60px;
   justify-content: center;
   list-style-type: none;
   }
