--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
-@import url(../vendor/normalize.css);
+@import url("../vendor/normalize.css");
 
-@import url(../blocks/logo/logo.css");
-@import url(../blocks/logo/_place/logo_place_footer.css);
-@import url(../blocks/logo/_place/logo_place_header.css);
+@import url("../blocks/logo/logo.css");
+@import url("../blocks/logo/_place/logo_place_footer.css");
+@import url("../blocks/logo/_place/logo_place_header.css");
 
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__link/header__link.css");
